--- a/.github/workflows/scala-s.yml
+++ b/.github/workflows/scala-s.yml
@@ -12,7 +12,7 @@ jobs:
         uses: scala-steward-org/scala-steward-action@v2
         with:
           github-token: ${{ secrets.G_TOKEN }}
-          author-email: nikhil.lalkota@ww.com
+          author-email: nikhillalkota09@gmail.com
           author-name: Nikhil Lalkota
           github-app-id: 121444
           github-app-key: ${{ secrets.APP_PRIVATE_KEY }}
